--- a/examples/eo-forge-gcp-downloader.ipynb
+++ b/examples/eo-forge-gcp-downloader.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9299865a",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "06c521b5",
    "metadata": {
     "tags": []
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bdd27366",
    "metadata": {
     "tags": []
@@ -95,7 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "68f32e65-5227-4f2b-834c-530ef7cddd59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f5907c62-bb2a-472b-9c3e-ed98d6efc569",
    "metadata": {},
    "outputs": [],
@@ -110,114 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "a3315bf3-4584-4ba1-8220-c80a4b484059",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product-id</th>\n",
-       "      <th>base-url</th>\n",
-       "      <th>date</th>\n",
-       "      <th>clouds</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>S2A_MSIL1C_20210810T141741_N0301_R010_T19FCF_2...</td>\n",
-       "      <td>gs://gcp-public-data-sentinel-2/tiles/19/F/CF/...</td>\n",
-       "      <td>2021-08-10</td>\n",
-       "      <td>0.0764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>S2A_MSIL1C_20210820T141741_N0301_R010_T19FCF_2...</td>\n",
-       "      <td>gs://gcp-public-data-sentinel-2/tiles/19/F/CF/...</td>\n",
-       "      <td>2021-08-20</td>\n",
-       "      <td>8.1912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>S2A_MSIL1C_20210830T141741_N0301_R010_T19FCF_2...</td>\n",
-       "      <td>gs://gcp-public-data-sentinel-2/tiles/19/F/CF/...</td>\n",
-       "      <td>2021-08-30</td>\n",
-       "      <td>0.5686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>S2B_MSIL1C_20210815T141739_N0301_R010_T19FCF_2...</td>\n",
-       "      <td>gs://gcp-public-data-sentinel-2/tiles/19/F/CF/...</td>\n",
-       "      <td>2021-08-15</td>\n",
-       "      <td>88.9605</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>S2B_MSIL1C_20210825T141739_N0301_R010_T19FCF_2...</td>\n",
-       "      <td>gs://gcp-public-data-sentinel-2/tiles/19/F/CF/...</td>\n",
-       "      <td>2021-08-25</td>\n",
-       "      <td>80.1781</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>S2B_MSIL1C_20210904T141729_N0301_R010_T19FCF_2...</td>\n",
-       "      <td>gs://gcp-public-data-sentinel-2/tiles/19/F/CF/...</td>\n",
-       "      <td>2021-09-04</td>\n",
-       "      <td>47.2200</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          product-id  \\\n",
-       "0  S2A_MSIL1C_20210810T141741_N0301_R010_T19FCF_2...   \n",
-       "1  S2A_MSIL1C_20210820T141741_N0301_R010_T19FCF_2...   \n",
-       "2  S2A_MSIL1C_20210830T141741_N0301_R010_T19FCF_2...   \n",
-       "3  S2B_MSIL1C_20210815T141739_N0301_R010_T19FCF_2...   \n",
-       "4  S2B_MSIL1C_20210825T141739_N0301_R010_T19FCF_2...   \n",
-       "5  S2B_MSIL1C_20210904T141729_N0301_R010_T19FCF_2...   \n",
-       "\n",
-       "                                            base-url       date   clouds  \n",
-       "0  gs://gcp-public-data-sentinel-2/tiles/19/F/CF/... 2021-08-10   0.0764  \n",
-       "1  gs://gcp-public-data-sentinel-2/tiles/19/F/CF/... 2021-08-20   8.1912  \n",
-       "2  gs://gcp-public-data-sentinel-2/tiles/19/F/CF/... 2021-08-30   0.5686  \n",
-       "3  gs://gcp-public-data-sentinel-2/tiles/19/F/CF/... 2021-08-15  88.9605  \n",
-       "4  gs://gcp-public-data-sentinel-2/tiles/19/F/CF/... 2021-08-25  80.1781  \n",
-       "5  gs://gcp-public-data-sentinel-2/tiles/19/F/CF/... 2021-09-04  47.2200  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gcp_images.pd_filt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "2b1472cd",
    "metadata": {
     "tags": []
@@ -240,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c67336f4",
    "metadata": {
     "tags": []
@@ -267,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5cf8d2c0-0cd0-4a8c-a4d2-3a2e5bd8264c",
    "metadata": {},
    "outputs": [],
@@ -280,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b6670a64-16c4-43b0-b1dd-d71c47256d4c",
    "metadata": {},
    "outputs": [],
@@ -295,69 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f80bacb4-4acd-4623-9d81-6a41a9acd9bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product-id</th>\n",
-       "      <th>base-url</th>\n",
-       "      <th>date</th>\n",
-       "      <th>clouds</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LC08_L1TP_230094_20210904_20210904_01_RT</td>\n",
-       "      <td>gs://gcp-public-data-landsat/LC08/01/230/094/L...</td>\n",
-       "      <td>2021-09-04</td>\n",
-       "      <td>27.26</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 product-id  \\\n",
-       "0  LC08_L1TP_230094_20210904_20210904_01_RT   \n",
-       "\n",
-       "                                            base-url       date clouds  \n",
-       "0  gs://gcp-public-data-landsat/LC08/01/230/094/L... 2021-09-04  27.26  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gcp_images.pd_filt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "1b0ca79c-d0b7-4fdd-949c-e6c24c5f4bb4",
    "metadata": {},
    "outputs": [],
@@ -376,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "06490cf3-9000-4552-86ad-bedef0ee8dfc",
    "metadata": {},
    "outputs": [],
@@ -401,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4bc82d95-a51a-42c9-95ad-264ffb2969d6",
    "metadata": {},
    "outputs": [],
@@ -417,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "5cb37a79-3fc6-48ab-9213-555fc04a8e2a",
    "metadata": {},
    "outputs": [],
@@ -432,78 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1df2a7e1-9415-444f-8541-5584f3bc7386",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>product-id</th>\n",
-       "      <th>base-url</th>\n",
-       "      <th>date</th>\n",
-       "      <th>clouds</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>LT05_L1TP_230094_20111011_20161005_01_T1</td>\n",
-       "      <td>gs://gcp-public-data-landsat/LT05/01/230/094/L...</td>\n",
-       "      <td>2011-10-11</td>\n",
-       "      <td>7.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>LT05_L1TP_230094_20111027_20161005_01_T1</td>\n",
-       "      <td>gs://gcp-public-data-landsat/LT05/01/230/094/L...</td>\n",
-       "      <td>2011-10-27</td>\n",
-       "      <td>12.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                 product-id  \\\n",
-       "0  LT05_L1TP_230094_20111011_20161005_01_T1   \n",
-       "1  LT05_L1TP_230094_20111027_20161005_01_T1   \n",
-       "\n",
-       "                                            base-url       date clouds  \n",
-       "0  gs://gcp-public-data-landsat/LT05/01/230/094/L... 2011-10-11   7.00  \n",
-       "1  gs://gcp-public-data-landsat/LT05/01/230/094/L... 2011-10-27  12.00  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gcp_images.pd_filt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "82893d8a-0b94-4d79-aafb-5e72f98ead05",
    "metadata": {},
    "outputs": [],
@@ -522,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1280fe3a-ea93-4d3f-b955-cd378795a41f",
    "metadata": {},
    "outputs": [],
@@ -541,7 +331,7 @@
    "hash": "4c78f1f64d2c4342f66d9fb6b32ba24e0b7f5d27c9741402c1c09b132e667596"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -555,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
