--- a/examples/eo-forge-loaders-101.ipynb
+++ b/examples/eo-forge-loaders-101.ipynb
@@ -36,9 +36,11 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "#\n",
     "import rasterio as rio\n",
     "import geopandas as gpd\n",
+    "\n",
     "#\n",
     "from earthpy import plot"
    ]
@@ -63,14 +65,14 @@
    },
    "outputs": [],
    "source": [
-    "# Base dir \n",
-    "TMP_PROD='./products-int/'\n",
+    "# Base dir\n",
+    "TMP_PROD = \"./products-int/\"\n",
     "# IMAGES RAW Search Path\n",
-    "IMAGES_RAW=os.path.join(TMP_PROD,'images-raw')\n",
+    "IMAGES_RAW = os.path.join(TMP_PROD, \"images-raw\")\n",
     "#\n",
     "# IMAGES CROP Path (to leave cropped files - if appy)\n",
-    "PROD_INT_DIR=os.path.join(TMP_PROD,'images-crop')\n",
-    "os.makedirs(PROD_INT_DIR,exist_ok=True)"
+    "PROD_INT_DIR = os.path.join(TMP_PROD, \"images-crop\")\n",
+    "os.makedirs(PROD_INT_DIR, exist_ok=True)"
    ]
   },
   {
@@ -95,8 +97,8 @@
    "outputs": [],
    "source": [
     "# Init Loader and query bands\n",
-    "LANDSAT5_BANDS=[\"B1\",\"B2\",\"B3\",\"B4\",\"B5\"]\n",
-    "lp=LandsatLoader(IMAGES_RAW,bands=LANDSAT5_BANDS,spacecraft=5)"
+    "LANDSAT5_BANDS = [\"B1\", \"B2\", \"B3\", \"B4\", \"B5\"]\n",
+    "lp = LandsatLoader(IMAGES_RAW, bands=LANDSAT5_BANDS, spacecraft=5)"
    ]
   },
   {
@@ -121,12 +123,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_id= \"LT05_L1TP_230094_20111011_20161005_01_T1\"\n",
-    "res_=lp.execute(product_id,\n",
-    "               bbox=None,\n",
-    "               folder_proc_=PROD_INT_DIR,\n",
-    "               raster_return_open=False,\n",
-    "               write_file='_complete')"
+    "product_id = \"LT05_L1TP_230094_20111011_20161005_01_T1\"\n",
+    "res_ = lp.execute(\n",
+    "    product_id,\n",
+    "    bbox=None,\n",
+    "    folder_proc_=PROD_INT_DIR,\n",
+    "    raster_return_open=False,\n",
+    "    write_file=\"_complete\",\n",
+    ")"
    ]
   },
   {
@@ -151,7 +155,7 @@
     }
    ],
    "source": [
-    "#check res_\n",
+    "# check res_\n",
     "res_"
    ]
   },
@@ -175,15 +179,15 @@
     }
    ],
    "source": [
-    "f, ax= plt.subplots(1,2,figsize=(20,20))\n",
-    "raster=rio.open(res_['raster_path'])\n",
-    "plot.plot_rgb(raster.read(),rgb=(2,1,0),ax=ax[0],stretch=True)\n",
-    "ax[0].set_title('True Color Image')\n",
+    "f, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
+    "raster = rio.open(res_[\"raster_path\"])\n",
+    "plot.plot_rgb(raster.read(), rgb=(2, 1, 0), ax=ax[0], stretch=True)\n",
+    "ax[0].set_title(\"True Color Image\")\n",
     "raster.close()\n",
     "\n",
-    "raster=rio.open(res_['raster_cloud_path'])\n",
-    "plot.plot_bands(raster.read(),ax=ax[1])\n",
-    "ax[1].set_title('Cloud Mask')\n",
+    "raster = rio.open(res_[\"raster_cloud_path\"])\n",
+    "plot.plot_bands(raster.read(), ax=ax[1])\n",
+    "ax[1].set_title(\"Cloud Mask\")\n",
     "raster.close()"
    ]
   },
@@ -194,17 +198,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbox=gpd.read_file('./data/cardiel-lake.geojson')\n",
+    "bbox = gpd.read_file(\"./data/cardiel-lake.geojson\")\n",
     "#\n",
     "# now use bbox\n",
     "# and do not write anything\n",
-    "product_id= \"LT05_L1TP_230094_20111011_20161005_01_T1\"\n",
+    "product_id = \"LT05_L1TP_230094_20111011_20161005_01_T1\"\n",
     "\n",
-    "res_bbox=lp.execute(product_id,\n",
-    "               bbox=bbox,\n",
-    "               folder_proc_=PROD_INT_DIR,\n",
-    "               raster_return_open=True,\n",
-    "               write_file=None)"
+    "res_bbox = lp.execute(\n",
+    "    product_id,\n",
+    "    bbox=bbox,\n",
+    "    folder_proc_=PROD_INT_DIR,\n",
+    "    raster_return_open=True,\n",
+    "    write_file=None,\n",
+    ")"
    ]
   },
   {
@@ -237,14 +243,14 @@
     }
    ],
    "source": [
-    "f, ax= plt.subplots(1,2,figsize=(20,20))\n",
-    "raster=res_bbox['raster']\n",
-    "plot.plot_rgb(raster.read(),rgb=(2,1,0),ax=ax[0])\n",
-    "ax[0].set_title('True Color Image')\n",
+    "f, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
+    "raster = res_bbox[\"raster\"]\n",
+    "plot.plot_rgb(raster.read(), rgb=(2, 1, 0), ax=ax[0])\n",
+    "ax[0].set_title(\"True Color Image\")\n",
     "\n",
-    "raster=res_bbox['raster_cloud']\n",
-    "plot.plot_bands(raster.read(),ax=ax[1])\n",
-    "ax[1].set_title('Cloud Mask')"
+    "raster = res_bbox[\"raster_cloud\"]\n",
+    "plot.plot_bands(raster.read(), ax=ax[1])\n",
+    "ax[1].set_title(\"Cloud Mask\")"
    ]
   },
   {
@@ -269,8 +275,8 @@
    "outputs": [],
    "source": [
     "# Init Loader and query bands\n",
-    "LANDSAT8_BANDS=[\"B2\",\"B3\",\"B4\",\"B5\",\"B6\"]\n",
-    "lp=LandsatLoader(IMAGES_RAW,bands=LANDSAT8_BANDS,spacecraft=8)"
+    "LANDSAT8_BANDS = [\"B2\", \"B3\", \"B4\", \"B5\", \"B6\"]\n",
+    "lp = LandsatLoader(IMAGES_RAW, bands=LANDSAT8_BANDS, spacecraft=8)"
    ]
   },
   {
@@ -295,12 +301,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_id= \"LC08_L1TP_230094_20210904_20210904_01_RT\"\n",
-    "res_=lp.execute(product_id,\n",
-    "               bbox=None,\n",
-    "               folder_proc_=PROD_INT_DIR,\n",
-    "               raster_return_open=False,\n",
-    "               write_file='_complete')"
+    "product_id = \"LC08_L1TP_230094_20210904_20210904_01_RT\"\n",
+    "res_ = lp.execute(\n",
+    "    product_id,\n",
+    "    bbox=None,\n",
+    "    folder_proc_=PROD_INT_DIR,\n",
+    "    raster_return_open=False,\n",
+    "    write_file=\"_complete\",\n",
+    ")"
    ]
   },
   {
@@ -325,7 +333,7 @@
     }
    ],
    "source": [
-    "#check res_\n",
+    "# check res_\n",
     "res_"
    ]
   },
@@ -349,15 +357,15 @@
     }
    ],
    "source": [
-    "f, ax= plt.subplots(1,2,figsize=(20,20))\n",
-    "raster=rio.open(res_['raster_path'])\n",
-    "plot.plot_rgb(raster.read(),rgb=(2,1,0),ax=ax[0],stretch=True)\n",
-    "ax[0].set_title('True Color Image')\n",
+    "f, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
+    "raster = rio.open(res_[\"raster_path\"])\n",
+    "plot.plot_rgb(raster.read(), rgb=(2, 1, 0), ax=ax[0], stretch=True)\n",
+    "ax[0].set_title(\"True Color Image\")\n",
     "raster.close()\n",
     "\n",
-    "raster=rio.open(res_['raster_cloud_path'])\n",
-    "plot.plot_bands(raster.read(),ax=ax[1])\n",
-    "ax[1].set_title('Cloud Mask')\n",
+    "raster = rio.open(res_[\"raster_cloud_path\"])\n",
+    "plot.plot_bands(raster.read(), ax=ax[1])\n",
+    "ax[1].set_title(\"Cloud Mask\")\n",
     "raster.close()"
    ]
   },
@@ -369,15 +377,17 @@
    "outputs": [],
    "source": [
     "# now use bbox\n",
-    "bbox=gpd.read_file('./data/cardiel-lake.geojson')\n",
+    "bbox = gpd.read_file(\"./data/cardiel-lake.geojson\")\n",
     "# and do not write anything\n",
-    "product_id= \"LC08_L1TP_230094_20210904_20210904_01_RT\"\n",
+    "product_id = \"LC08_L1TP_230094_20210904_20210904_01_RT\"\n",
     "\n",
-    "res_bbox=lp.execute(product_id,\n",
-    "               bbox=bbox,\n",
-    "               folder_proc_=PROD_INT_DIR,\n",
-    "               raster_return_open=True,\n",
-    "               write_file=None)"
+    "res_bbox = lp.execute(\n",
+    "    product_id,\n",
+    "    bbox=bbox,\n",
+    "    folder_proc_=PROD_INT_DIR,\n",
+    "    raster_return_open=True,\n",
+    "    write_file=None,\n",
+    ")"
    ]
   },
   {
@@ -435,14 +445,14 @@
     }
    ],
    "source": [
-    "f, ax= plt.subplots(1,2,figsize=(20,20))\n",
-    "raster=res_bbox['raster']\n",
-    "plot.plot_rgb(raster.read(),rgb=(2,1,0),ax=ax[0])\n",
-    "ax[0].set_title('True Color Image')\n",
+    "f, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
+    "raster = res_bbox[\"raster\"]\n",
+    "plot.plot_rgb(raster.read(), rgb=(2, 1, 0), ax=ax[0])\n",
+    "ax[0].set_title(\"True Color Image\")\n",
     "\n",
-    "raster=res_bbox['raster_cloud']\n",
-    "plot.plot_bands(raster.read(),ax=ax[1])\n",
-    "ax[1].set_title('Cloud Mask')\n"
+    "raster = res_bbox[\"raster_cloud\"]\n",
+    "plot.plot_bands(raster.read(), ax=ax[1])\n",
+    "ax[1].set_title(\"Cloud Mask\")"
    ]
   },
   {
@@ -467,8 +477,8 @@
    "outputs": [],
    "source": [
     "# Init Loader and query bands\n",
-    "SENTINEL2_BANDS=[\"B02\",\"B03\",\"B04\",\"B08\",\"B11\"]\n",
-    "lp=Sentinel2Loader(IMAGES_RAW,bands=SENTINEL2_BANDS,resolution=10)"
+    "SENTINEL2_BANDS = [\"B02\", \"B03\", \"B04\", \"B08\", \"B11\"]\n",
+    "lp = Sentinel2Loader(IMAGES_RAW, bands=SENTINEL2_BANDS, resolution=10)"
    ]
   },
   {
@@ -491,12 +501,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product_id= \"S2A_MSIL1C_20210810T141741_N0301_R010_T19FCF_20210810T193059.SAFE\"\n",
-    "res_=lp.execute(product_id,\n",
-    "               bbox=None,\n",
-    "               folder_proc_=PROD_INT_DIR,\n",
-    "               raster_return_open=False,\n",
-    "               write_file='_complete')"
+    "product_id = \"S2A_MSIL1C_20210810T141741_N0301_R010_T19FCF_20210810T193059.SAFE\"\n",
+    "res_ = lp.execute(\n",
+    "    product_id,\n",
+    "    bbox=None,\n",
+    "    folder_proc_=PROD_INT_DIR,\n",
+    "    raster_return_open=False,\n",
+    "    write_file=\"_complete\",\n",
+    ")"
    ]
   },
   {
@@ -521,7 +533,7 @@
     }
    ],
    "source": [
-    "#check res_\n",
+    "# check res_\n",
     "res_"
    ]
   },
@@ -545,15 +557,15 @@
     }
    ],
    "source": [
-    "f, ax= plt.subplots(1,2,figsize=(20,20))\n",
-    "raster=rio.open(res_['raster_path'])\n",
-    "plot.plot_rgb(raster.read(),rgb=(2,1,0),ax=ax[0],stretch=True)\n",
-    "ax[0].set_title('True Color Image')\n",
+    "f, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
+    "raster = rio.open(res_[\"raster_path\"])\n",
+    "plot.plot_rgb(raster.read(), rgb=(2, 1, 0), ax=ax[0], stretch=True)\n",
+    "ax[0].set_title(\"True Color Image\")\n",
     "raster.close()\n",
     "\n",
-    "raster=rio.open(res_['raster_cloud_path'])\n",
-    "plot.plot_bands(raster.read(),ax=ax[1])\n",
-    "ax[1].set_title('Cloud Mask')\n",
+    "raster = rio.open(res_[\"raster_cloud_path\"])\n",
+    "plot.plot_bands(raster.read(), ax=ax[1])\n",
+    "ax[1].set_title(\"Cloud Mask\")\n",
     "raster.close()"
    ]
   },
@@ -565,15 +577,17 @@
    "outputs": [],
    "source": [
     "# now use bbox\n",
-    "bbox=gpd.read_file('./data/cardiel-lake.geojson')\n",
+    "bbox = gpd.read_file(\"./data/cardiel-lake.geojson\")\n",
     "# and do not write anything\n",
-    "product_id= \"S2A_MSIL1C_20210810T141741_N0301_R010_T19FCF_20210810T193059.SAFE\"\n",
+    "product_id = \"S2A_MSIL1C_20210810T141741_N0301_R010_T19FCF_20210810T193059.SAFE\"\n",
     "\n",
-    "res_bbox=lp.execute(product_id,\n",
-    "               bbox=bbox,\n",
-    "               folder_proc_=PROD_INT_DIR,\n",
-    "               raster_return_open=True,\n",
-    "               write_file=None)"
+    "res_bbox = lp.execute(\n",
+    "    product_id,\n",
+    "    bbox=bbox,\n",
+    "    folder_proc_=PROD_INT_DIR,\n",
+    "    raster_return_open=True,\n",
+    "    write_file=None,\n",
+    ")"
    ]
   },
   {
@@ -631,14 +645,14 @@
     }
    ],
    "source": [
-    "f, ax= plt.subplots(1,2,figsize=(20,20))\n",
-    "raster=res_bbox['raster']\n",
-    "plot.plot_rgb(raster.read(),rgb=(2,1,0),ax=ax[0],stretch=True)\n",
-    "ax[0].set_title('True Color Image')\n",
+    "f, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
+    "raster = res_bbox[\"raster\"]\n",
+    "plot.plot_rgb(raster.read(), rgb=(2, 1, 0), ax=ax[0], stretch=True)\n",
+    "ax[0].set_title(\"True Color Image\")\n",
     "\n",
-    "raster=res_bbox['raster_cloud']\n",
-    "plot.plot_bands(raster.read(),ax=ax[1])\n",
-    "ax[1].set_title('Cloud Mask')\n"
+    "raster = res_bbox[\"raster_cloud\"]\n",
+    "plot.plot_bands(raster.read(), ax=ax[1])\n",
+    "ax[1].set_title(\"Cloud Mask\")"
    ]
   }
  ],
@@ -661,7 +675,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
