--- a/examples/eo-forge-loaders-101-Loggers.ipynb
+++ b/examples/eo-forge-loaders-101-Loggers.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "9299865a",
    "metadata": {},
    "outputs": [],
@@ -65,15 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d71f1f2f-13cb-41f7-903c-e62645d4c2ca",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 2021/12/11 11:52:45 || INFO] || Running on Landsat 5 data\n"
+      "2021/12/14 11:18:47 - INFO - Running on Landsat 5 data\n"
      ]
     }
    ],
@@ -102,49 +102,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "b4f46d42-fbc5-410b-b0a4-4c6785ab0235",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 2021/12/11 11:52:45 || INFO] || Processing on ./products-int/images-raw/LT05_L1TP_230094_20111011_20161005_01_T1 dir\n",
-      " 2021/12/11 11:52:45 || INFO] || Using clipping flag: False\n",
-      " 2021/12/11 11:52:45 || INFO] || PROCESSING band: B1\n",
-      " 2021/12/11 11:52:45 || INFO] || resample: False - scale factor 1 - true pixel 30.0\n",
-      " 2021/12/11 11:52:45 || INFO] || no bbox - full match: True - area: 1\n",
-      " 2021/12/11 11:52:45 || INFO] || calibrating band B1\n",
-      " 2021/12/11 11:52:47 || INFO] || reprojecting band B1\n",
-      " 2021/12/11 11:52:54 || INFO] || PROCESSING band: B2\n",
-      " 2021/12/11 11:52:54 || INFO] || resample: False - scale factor 1 - true pixel 30.0\n",
-      " 2021/12/11 11:52:54 || INFO] || no bbox - full match: True - area: 1\n",
-      " 2021/12/11 11:52:54 || INFO] || calibrating band B2\n",
-      " 2021/12/11 11:52:56 || INFO] || reprojecting band B2\n",
-      " 2021/12/11 11:53:03 || INFO] || PROCESSING band: B3\n",
-      " 2021/12/11 11:53:03 || INFO] || resample: False - scale factor 1 - true pixel 30.0\n",
-      " 2021/12/11 11:53:03 || INFO] || no bbox - full match: True - area: 1\n",
-      " 2021/12/11 11:53:04 || INFO] || calibrating band B3\n",
-      " 2021/12/11 11:53:05 || INFO] || reprojecting band B3\n",
-      " 2021/12/11 11:53:13 || INFO] || PROCESSING band: B4\n",
-      " 2021/12/11 11:53:13 || INFO] || resample: False - scale factor 1 - true pixel 30.0\n",
-      " 2021/12/11 11:53:13 || INFO] || no bbox - full match: True - area: 1\n",
-      " 2021/12/11 11:53:13 || INFO] || calibrating band B4\n",
-      " 2021/12/11 11:53:15 || INFO] || reprojecting band B4\n",
-      " 2021/12/11 11:53:22 || INFO] || PROCESSING band: B5\n",
-      " 2021/12/11 11:53:22 || INFO] || resample: False - scale factor 1 - true pixel 30.0\n",
-      " 2021/12/11 11:53:22 || INFO] || no bbox - full match: True - area: 1\n",
-      " 2021/12/11 11:53:23 || INFO] || calibrating band B5\n",
-      " 2021/12/11 11:53:24 || INFO] || reprojecting band B5\n",
-      " 2021/12/11 11:53:32 || INFO] || Got Full Match (if applies) - no need to merge\n",
-      " 2021/12/11 11:53:39 || INFO] || Writting raster processed data to ./products-int/images-crop/LT05_L1TP_230094_20111011_20161005_01_T1_complete.TIF\n",
-      " 2021/12/11 11:53:39 || INFO] || Processing band: BQA\n",
-      " 2021/12/11 11:53:39 || INFO] || resample: False - scale factor 1 - true pixel 30.0\n",
-      " 2021/12/11 11:53:39 || INFO] || no bbox - full match: True - area: 1\n",
-      " 2021/12/11 11:53:39 || INFO] || calibrating band BQA\n",
-      " 2021/12/11 11:53:40 || INFO] || reprojecting band BQA\n",
-      " 2021/12/11 11:53:41 || INFO] || Writting raster cloud processed data to ./products-int/images-crop/LT05_L1TP_230094_20111011_20161005_01_T1_CLOUDS_complete.TIF\n"
+      "2021/12/14 11:18:48 - INFO - Processing on ./products-int/images-raw/LT05_L1TP_230094_20111011_20161005_01_T1 dir\n",
+      "2021/12/14 11:18:48 - INFO - Using clipping flag: False\n",
+      "2021/12/14 11:18:48 - INFO - PROCESSING band: B1\n",
+      "2021/12/14 11:18:48 - INFO - resample: False - scale factor 1 - true pixel 30.0\n",
+      "2021/12/14 11:18:48 - INFO - no bbox - full match: True - area: 1\n",
+      "2021/12/14 11:18:49 - INFO - calibrating band B1\n",
+      "2021/12/14 11:18:51 - INFO - reprojecting band B1\n",
+      "2021/12/14 11:18:58 - INFO - PROCESSING band: B2\n",
+      "2021/12/14 11:18:58 - INFO - resample: False - scale factor 1 - true pixel 30.0\n",
+      "2021/12/14 11:18:58 - INFO - no bbox - full match: True - area: 1\n",
+      "2021/12/14 11:18:58 - INFO - calibrating band B2\n",
+      "2021/12/14 11:19:00 - INFO - reprojecting band B2\n",
+      "2021/12/14 11:19:07 - INFO - PROCESSING band: B3\n",
+      "2021/12/14 11:19:07 - INFO - resample: False - scale factor 1 - true pixel 30.0\n",
+      "2021/12/14 11:19:07 - INFO - no bbox - full match: True - area: 1\n",
+      "2021/12/14 11:19:08 - INFO - calibrating band B3\n",
+      "2021/12/14 11:19:09 - INFO - reprojecting band B3\n",
+      "2021/12/14 11:19:17 - INFO - PROCESSING band: B4\n",
+      "2021/12/14 11:19:17 - INFO - resample: False - scale factor 1 - true pixel 30.0\n",
+      "2021/12/14 11:19:17 - INFO - no bbox - full match: True - area: 1\n",
+      "2021/12/14 11:19:17 - INFO - calibrating band B4\n",
+      "2021/12/14 11:19:19 - INFO - reprojecting band B4\n",
+      "2021/12/14 11:19:26 - INFO - PROCESSING band: B5\n",
+      "2021/12/14 11:19:26 - INFO - resample: False - scale factor 1 - true pixel 30.0\n",
+      "2021/12/14 11:19:26 - INFO - no bbox - full match: True - area: 1\n",
+      "2021/12/14 11:19:27 - INFO - calibrating band B5\n",
+      "2021/12/14 11:19:28 - INFO - reprojecting band B5\n",
+      "2021/12/14 11:19:36 - INFO - Got Full Match (if applies) - no need to merge\n",
+      "2021/12/14 11:19:43 - INFO - Writting raster processed data to ./products-int/images-crop/LT05_L1TP_230094_20111011_20161005_01_T1_complete.TIF\n",
+      "2021/12/14 11:19:43 - INFO - Processing band: BQA\n",
+      "2021/12/14 11:19:43 - INFO - resample: False - scale factor 1 - true pixel 30.0\n",
+      "2021/12/14 11:19:43 - INFO - no bbox - full match: True - area: 1\n",
+      "2021/12/14 11:19:43 - INFO - calibrating band BQA\n",
+      "2021/12/14 11:19:45 - INFO - Writting raster cloud processed data to ./products-int/images-crop/LT05_L1TP_230094_20111011_20161005_01_T1_CLOUDS_complete.TIF\n"
      ]
     }
    ],
